; ModuleID = '/home/carl/AnghaBench/kphp-kdb/bayes/extr_bayes-engine.c_memcache_get.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/bayes/extr_bayes-engine.c_memcache_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.connection = type { i32, %struct.TYPE_4__*, %struct.TYPE_3__ }
%struct.TYPE_4__ = type { i32 (%struct.connection*)* }
%struct.TYPE_3__ = type { i32 }

@verbosity = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [24 x i8] c"memcache_get: key='%s'\0A\00", align 1
@WaitAio = common dso_local global i32* null, align 8
@C_INTIMEOUT = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [31 x i8] c"memcache_get: IN TIMEOUT (%p)\0A\00", align 1
@C_WANTWR = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [61 x i8] c"WaitAio=0 - no memory to load user metafile, query dropped.\0A\00", align 1
@aio_metafile_query_type = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @memcache_get(%struct.connection* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.connection*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.connection* %0, %struct.connection** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load i32, i32* @verbosity, align 4
  %10 = icmp sgt i32 %9, 1
  br i1 %10, label %11, label %15

11:                                               ; preds = %3
  %12 = load i32, i32* @stderr, align 4
  %13 = load i8*, i8** %6, align 8
  %14 = call i32 (i32, i8*, ...) @fprintf(i32 %12, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0), i8* %13)
  br label %15

15:                                               ; preds = %11, %3
  store i32* null, i32** @WaitAio, align 8
  %16 = load %struct.connection*, %struct.connection** %5, align 8
  %17 = load i8*, i8** %6, align 8
  %18 = load i32, i32* %7, align 4
  %19 = call i32 @memcache_try_get(%struct.connection* %16, i8* %17, i32 %18)
  store i32 %19, i32* %8, align 4
  %20 = load i32, i32* %8, align 4
  %21 = icmp eq i32 %20, -2
  br i1 %21, label %22, label %68

22:                                               ; preds = %15
  %23 = load %struct.connection*, %struct.connection** %5, align 8
  %24 = getelementptr inbounds %struct.connection, %struct.connection* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 8
  %26 = load i32, i32* @C_INTIMEOUT, align 4
  %27 = and i32 %25, %26
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %29, label %37

29:                                               ; preds = %22
  %30 = load i32, i32* @verbosity, align 4
  %31 = icmp sgt i32 %30, 1
  br i1 %31, label %32, label %36

32:                                               ; preds = %29
  %33 = load i32, i32* @stderr, align 4
  %34 = load %struct.connection*, %struct.connection** %5, align 8
  %35 = call i32 (i32, i8*, ...) @fprintf(i32 %33, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.1, i64 0, i64 0), %struct.connection* %34)
  br label %36

36:                                               ; preds = %32, %29
  store i32 0, i32* %4, align 4
  br label %69

37:                                               ; preds = %22
  %38 = load %struct.connection*, %struct.connection** %5, align 8
  %39 = getelementptr inbounds %struct.connection, %struct.connection* %38, i32 0, i32 2
  %40 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %39, i32 0, i32 0
  %41 = load i32, i32* %40, align 8
  %42 = icmp sgt i32 %41, 8192
  br i1 %42, label %43, label %56

43:                                               ; preds = %37
  %44 = load i32, i32* @C_WANTWR, align 4
  %45 = load %struct.connection*, %struct.connection** %5, align 8
  %46 = getelementptr inbounds %struct.connection, %struct.connection* %45, i32 0, i32 0
  %47 = load i32, i32* %46, align 8
  %48 = or i32 %47, %44
  store i32 %48, i32* %46, align 8
  %49 = load %struct.connection*, %struct.connection** %5, align 8
  %50 = getelementptr inbounds %struct.connection, %struct.connection* %49, i32 0, i32 1
  %51 = load %struct.TYPE_4__*, %struct.TYPE_4__** %50, align 8
  %52 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %51, i32 0, i32 0
  %53 = load i32 (%struct.connection*)*, i32 (%struct.connection*)** %52, align 8
  %54 = load %struct.connection*, %struct.connection** %5, align 8
  %55 = call i32 %53(%struct.connection* %54)
  br label %56

56:                                               ; preds = %43, %37
  %57 = load i32*, i32** @WaitAio, align 8
  %58 = icmp ne i32* %57, null
  br i1 %58, label %62, label %59

59:                                               ; preds = %56
  %60 = load i32, i32* @stderr, align 4
  %61 = call i32 (i32, i8*, ...) @fprintf(i32 %60, i8* getelementptr inbounds ([61 x i8], [61 x i8]* @.str.2, i64 0, i64 0))
  store i32 0, i32* %4, align 4
  br label %69

62:                                               ; preds = %56
  %63 = load i32*, i32** @WaitAio, align 8
  %64 = load %struct.connection*, %struct.connection** %5, align 8
  %65 = call i32 @conn_schedule_aio(i32* %63, %struct.connection* %64, double 0x3FE6666666666666, i32* @aio_metafile_query_type)
  %66 = load %struct.connection*, %struct.connection** %5, align 8
  %67 = call i32 @set_connection_timeout(%struct.connection* %66, double 5.000000e-01)
  store i32 0, i32* %4, align 4
  br label %69

68:                                               ; preds = %15
  store i32 0, i32* %4, align 4
  br label %69

69:                                               ; preds = %68, %62, %59, %36
  %70 = load i32, i32* %4, align 4
  ret i32 %70
}

declare dso_local i32 @fprintf(i32, i8*, ...) #1

declare dso_local i32 @memcache_try_get(%struct.connection*, i8*, i32) #1

declare dso_local i32 @conn_schedule_aio(i32*, %struct.connection*, double, i32*) #1

declare dso_local i32 @set_connection_timeout(%struct.connection*, double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
